--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "jquery": "^3.7.1",
+    "mysql": "^2.18.1",
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
